index.html modified

--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
 <body>
   <header>
     <nav>
-      <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="deneme">Ali</a></li>
-        <li><a href="">Deneme</a></li>
-      </ul>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="deneme">Ali</a></li>
+            <li><a href="">Deneme</a></li>
+            <li><a href="">Tab</a></li>
+            <li><a href="">Tab1</a></li>
+
+        </ul>
     </nav>
     <section></section>
     <img src="streetCar.jpg" alt="" lengt="1000" width="1903">
