--- a/index.html
+++ b/index.html
@@ -14,12 +14,11 @@
             <li><a href="deneme">Ali</a></li>
             <li><a href="">Deneme</a></li>
             <li><a href="">Tab</a></li>
-            <li><a href="">Tab1</a></li>
 
         </ul>
     </nav>
     <section></section>
-    <img src="streetCar.jpg" alt="" lengt="200" width="1903">
+    <img src="streetCar.jpg" width="1519" height="1280" 
     
 
   </header>
