--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   <header>
     <nav>
         <ul>
-            <li><a href="#home">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="deneme">Ali</a></li>
-            <li><a href="">Deneme</a></li>
-            <li><a href="">Tab</a></li>
+            <li><a href="">News</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="whitepages.html">White Pages</a></li>
 
         </ul>
     </nav>
